--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,7 +1,7 @@
 @import '~bootstrap/scss/bootstrap' ;
 
 body {
-    background-color: black;
+    background-color: white;
 }
 
 a {
@@ -9,14 +9,23 @@ a {
     color: currentColor;
 }
 
+.navbar{
+    background-color: #1C506E ;
+}
 
 .logo {
     width: 80px; 
+    transform: rotate(0);
+    transition: transform 0.5s;
 
     img {
         max-width: 100%; 
         padding: 10px; 
     }
+}
+
+.logo:hover{
+    transform: rotate(180deg);
 }
 
 .logo-text {
