--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -54,11 +54,34 @@ a {
 .img-table {
     width: 100px;
     max-width: 100%; 
+    min-height: 100%; 
 }
 
 .cell-center {
     height: 100%; 
     display: flex ; 
     align-items: center;
+}
+
+.table-item-wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+     
+
+}
+
+.card-content {
+    padding: 10px; 
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+    justify-content: center;
+    align-items: center;
+
+    p {
+        text-align: center;
+    }
 }
 
